[metadata]
name = pupil-av
version = file: src/VERSION
description = Extended PyAV library for Pupil Core
long_description = file: README.md, CHANGELOG, LICENSE
author = Pupil Labs
author_email = info@pupil-labs.com
url = https://github.com/pupil-labs/pupil-av

[options]
package_dir =
    = src
packages = find:
install_requires =
    av>=8.0.0
zip_safe = False

[options.packages.find]
where = src
